# lloyal.node

./: .gitattributes  .gitignore  .gitmodules  .npmignore  CMakeLists.txt  CONTRIBUTING.md  GRANT.md  LICENSE  LICENSE-FAQ.md  NOTICE  README.md  VENDORING.md  binding.gyp  jsdoc.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  typedoc.json
.github/actions/provision-cuda/: action.yaml
.github/workflows/: docs.yml  gpu-test.yml  hdk-gpu-test.yml  release.yml  sdk-gpu-test.yml  tests.yml
ci/: Dockerfile.gpu-tests  run-gpu-tests.sh  setup-infra.sh
cmake/: arm64-cross.cmake
docs/: distribution.md  transformation.md
examples/best-of-n/: README.md  best-of-n.mjs
examples/chat/: README.md  chat.mjs  chat.ts
examples/cli/: CLI_USAGE.md  README.md  package-lock.json  package.json  tsconfig.json
examples/cli/src/: index.tsx
examples/cli/src/components/: App.tsx  BootScreen.tsx  Chat.tsx  DownloadProgress.tsx  Message.tsx  ModelLoader.tsx  QuickTextInput.tsx
examples/cli/src/utils/: modelDownloader.ts
examples/deep-research/: deep-research.mjs  deep-research.ts  display.ts  harness.ts  main.ts  reranker.ts  tui.ts
examples/deep-research/resources/: files.ts
examples/deep-research/tasks/: eval.md  eval.ts  graceful-termination.md  plan.md  plan.ts  research.md  research.ts  verify.md  verify.ts
examples/deep-research/tools/: grep.ts  index.ts  read-file.ts  report.ts  search.ts  types.ts
examples/embed/: embed.mjs  embed.ts
examples/entropy/: README.md  entropy.mjs  entropy.ts
examples/grammar/: README.md  grammar.mjs
examples/speculative/: README.md  speculative.mjs
examples/streaming/: README.md  streaming-semantic-entropy.mjs  streaming-summary.mjs  streaming-tsampler.mjs  streaming.mjs
lib/: Agent.js  Branch.js  BranchStore.js  Session.js  index.d.ts  index.js
models/: SmolLM2-1.7B-Instruct-Q4_K_M.gguf
scripts/: build-linux-shared.sh  build-llama.sh  build.js  check-isa-floor.js  check-isa-floor.test.js  copy-dylib.sh  create-platform-package.js  download-test-models.sh  init-submodules.js  install.js  setup-headers.js  sync-llama-cpp.js  sync-versions.js  update-vendors.js
src/: Agent.ts  BackendManager.cpp  BackendManager.hpp  Branch.ts  FileSystem.h  Rerank.ts  Session.ts  SessionContext.cpp  SessionContext.hpp  Util.cpp  Util.hpp  binding.cpp  index.ts  types.ts
src/agents/: agent-pool.ts  context.ts  deltas.ts  diverge.ts  generate.ts  index.ts  init.ts  shared-root.ts  toolkit.ts  types.ts
test/: __rerank-large-corpus-standalone.ts  agents.ts  api.js  e2e.js  embedding.js  examples.js  examples.ts  integration.js  integration.ts  matrix.json  setup-test-model.sh  smoke.js
